--- a/public/admin.html
+++ b/public/admin.html
@@ -6,6 +6,7 @@
   <title>AgriStand Admin</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <style>
     body {
       background: #f4f8f6;
@@ -85,6 +86,7 @@
               <th>Title</th>
               <th>Year</th>
               <th>File</th>
+              <th>Actions</th>
             </tr>
           </thead>
           <tbody>
@@ -126,6 +128,44 @@
               <button type="submit" class="btn btn-success w-100">Upload Standard</button>
             </form>
             <div id="modalStatusMsg" class="mt-3"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Edit Modal -->
+    <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editModalLabel">Edit Standard</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="editForm">
+              <input type="hidden" id="editId">
+              <div class="mb-3">
+                <label class="form-label">Category</label>
+                <input type="text" class="form-control" id="editCategory" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Title No.</label>
+                <input type="text" class="form-control" id="editTitleNo" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Title</label>
+                <input type="text" class="form-control" id="editTitle" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Year</label>
+                <input type="number" class="form-control" id="editYear" required>
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Replace PDF File (optional)</label>
+                <input type="file" class="form-control" id="editFile" accept="application/pdf">
+              </div>
+              <button type="submit" class="btn btn-success w-100">Save Changes</button>
+            </form>
+            <div id="editModalStatusMsg" class="mt-3"></div>
           </div>
         </div>
       </div>
