--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,26 @@
   <title>AgriStand</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+    .navbar {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    .footer {
+      position: sticky;
+      bottom: 0;
+      z-index: 1000;
+    }
+    .main-content {
+      flex: 1;
+    }
+  </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
@@ -14,25 +34,49 @@
         <img src="https://img.icons8.com/ios-filled/50/4caf50/tractor.png" alt="Logo" width="40" height="40" class="me-2">
         <span class="fw-bold fs-4">AgriStand</span>
       </a>
-      <span class="navbar-text ms-3">Empowering Agriculture through Increased Standard Accessibility</span>
-    </div>
-  </nav>
-  <div class="container my-4">
-    <div class="row mb-3">
-      <div class="col-md-8">
-        <input id="searchInput" type="text" class="form-control" placeholder="Search standards by title, number, or keyword...">
-      </div>
-      <div class="col-md-4">
-        <select id="categoryFilter" class="form-select">
+      <span class="navbar-text ms-3 d-none d-lg-block">Empowering Agriculture through Increased Standard Accessibility</span>
+      <div class="d-flex gap-2 ms-auto">
+        <div class="input-group">
+          <span class="input-group-text bg-white border-end-0">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+            </svg>
+          </span>
+          <input id="searchInput" type="text" class="form-control border-start-0" placeholder="Search standards...">
+        </div>
+        <select id="categoryFilter" class="form-select" style="width: auto;">
           <option value="">All Categories</option>
         </select>
       </div>
     </div>
-    <div id="standardsList"></div>
+  </nav>
+  <div class="main-content">
+    <div class="container my-4">
+      <div class="row mb-4">
+        <div class="col-12">
+          <div class="card">
+            <div class="card-body">
+              <h2 class="card-title mb-3">Welcome to AgriStand!</h2>
+              <p class="card-text">
+                AgriStand is a dedicated web portal designed to provide centralized, organized, and easily accessible references to Philippine Agricultural and Biosystems Engineering (ABE)-related standards. Tailored for ABE students, educators, professionals, and board exam reviewees, the portal offers a user-friendly interface, mobile-responsive design, and categorized access to standards from sources such as AMTEC and BAFS. With its structured layout, category filter, and basic search functionality, AgriStand supports efficient study, research, and technical referencing—particularly for users in academic and rural settings who require fast and reliable access to essential documents.
+              </p>
+              <p class="card-text">
+                This student-initiated project is led by Henry Gabriel A. Pradilla, a student of the Department of Agricultural and Biosystems Engineering at Visayas State University (VSU-DABE), as part of his undergraduate thesis. AgriStand is continuously being improved and updated as more standards are published and made available.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div id="standardsList"></div>
+    </div>
   </div>
-  <footer class="footer bg-light border-top py-3 mt-auto">
+  <footer class="footer bg-light border-top py-3">
     <div class="container d-flex justify-content-between align-items-center">
-      <span class="fw-bold">Sponsors:</span>
+      <div class="d-flex align-items-center gap-3">
+        <span class="fw-bold">Presented by:</span>
+        <img src="/src/DABE2.png" alt="DABE Logo" height="40">
+        <img src="/src/VSU logo1.png" alt="VSU Logo" height="40">
+      </div>
       <span>Help us maintain and improve AgriStand!</span>
       <a href="#" class="fw-bold">Contact Us</a>
     </div>
