Fixed logo rendering of DABE and VSU (not rendering) -trial2

--- a/public/index.html
+++ b/public/index.html
@@ -74,8 +74,8 @@
     <div class="container d-flex justify-content-between align-items-center">
       <div class="d-flex align-items-center gap-3">
         <span class="fw-bold">Presented by:</span>
-        <img src="../src/DABE2.png" alt="DABE Logo" height="40">
-        <img src="../src/VSU logo1.png" alt="VSU Logo" height="40">
+        <img src="DABE2.png" alt="DABE Logo" height="40">
+        <img src="VSU logo1.png" alt="VSU Logo" height="40">
       </div>
       <span>Help us maintain and improve AgriStand!</span>
       <a href="#" class="fw-bold">Contact Us</a>
