Improved Admin page and fixed text alignment of Welcome of AgriStand

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
         <img src="https://img.icons8.com/ios-filled/50/4caf50/tractor.png" alt="Logo" width="40" height="40" class="me-2">
         <span class="fw-bold fs-4">AgriStand</span>
       </a>
-      <span class="navbar-text ms-3 d-none d-lg-block">Empowering Agriculture through Increased Standard Accessibility</span>
+      <span class="navbar-text ms-3 d-none d-lg-block text-dark">Empowering Agriculture through Increased Standard Accessibility</span>
       <div class="d-flex gap-2 ms-auto">
         <div class="input-group">
           <span class="input-group-text bg-white border-end-0">
@@ -56,11 +56,11 @@
         <div class="col-12">
           <div class="card">
             <div class="card-body">
-              <h2 class="card-title mb-3">Welcome to AgriStand!</h2>
-              <p class="card-text">
+              <h2 class="card-title mb-3 text-center">Welcome to AgriStand!</h2>
+              <p class="card-text" style="text-align: justify; text-justify: inter-word;">
                 AgriStand is a dedicated web portal designed to provide centralized, organized, and easily accessible references to Philippine Agricultural and Biosystems Engineering (ABE)-related standards. Tailored for ABE students, educators, professionals, and board exam reviewees, the portal offers a user-friendly interface, mobile-responsive design, and categorized access to standards from sources such as AMTEC and BAFS. With its structured layout, category filter, and basic search functionality, AgriStand supports efficient study, research, and technical referencing—particularly for users in academic and rural settings who require fast and reliable access to essential documents.
               </p>
-              <p class="card-text">
+              <p class="card-text" style="text-align: justify; text-justify: inter-word;">
                 This student-initiated project is led by Henry Gabriel A. Pradilla, a student of the Department of Agricultural and Biosystems Engineering at Visayas State University (VSU-DABE), as part of his undergraduate thesis. AgriStand is continuously being improved and updated as more standards are published and made available.
               </p>
             </div>
