--- a/public/admin.html
+++ b/public/admin.html
@@ -27,11 +27,19 @@
       border-radius: 1rem;
       box-shadow: 0 4px 24px rgba(44, 62, 80, 0.08);
     }
-    .logout-btn {
-      position: absolute;
-      top: 30px;
-      right: 30px;
-      z-index: 10;
+    .admin-header {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background: white;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+    .footer {
+      position: sticky;
+      bottom: 0;
+      z-index: 1000;
+      background: white;
+      box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
     }
     .admin-table-card {
       max-width: 1100px;
@@ -40,6 +48,31 @@
       box-shadow: 0 4px 24px rgba(44, 62, 80, 0.10);
       background: #fff;
       padding: 2.5rem 2rem 2rem 2rem;
+    }
+    .profile-dropdown .dropdown-toggle::after {
+      display: none;
+    }
+    .profile-dropdown .dropdown-toggle {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 8px 16px;
+      border-radius: 20px;
+      background: #f8f9fa;
+      border: 1px solid #dee2e6;
+    }
+    .profile-dropdown .dropdown-toggle:hover {
+      background: #e9ecef;
+    }
+    .profile-icon {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      background: #4caf50;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
     }
     @media (max-width: 600px) {
       .admin-table-card { padding: 1.5rem 0.5rem; }
@@ -68,7 +101,27 @@
     </div>
   </div>
   <div id="adminSection" style="display:none; position:relative; min-height:100vh;">
-    <button id="logoutBtn" class="btn btn-secondary logout-btn">Logout</button>
+    <header class="admin-header py-2">
+      <div class="container-fluid">
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="d-flex align-items-center">
+            <img src="https://img.icons8.com/ios-filled/50/4caf50/tractor.png" alt="Logo" width="40" height="40" class="me-2">
+            <span class="fw-bold fs-5">AgriStand | Admin</span>
+          </div>
+          <div class="profile-dropdown dropdown">
+            <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <div class="profile-icon">
+                <i class="bi bi-person-fill"></i>
+              </div>
+              <span id="adminEmail" class="d-none d-md-inline">Admin</span>
+            </button>
+            <ul class="dropdown-menu dropdown-menu-end">
+              <li><a class="dropdown-item" href="#" id="logoutBtn"><i class="bi bi-box-arrow-right me-2"></i>Logout</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
     <div class="admin-table-card">
       <div class="d-flex justify-content-between align-items-center mb-4">
         <h3 class="fw-bold mb-0">Standards List</h3>
@@ -77,22 +130,8 @@
         </button>
       </div>
       <div id="adminStatusMsg"></div>
-      <div class="table-responsive">
-        <table class="table table-striped align-middle" id="standardsTable">
-          <thead>
-            <tr>
-              <th>Category</th>
-              <th>Title No.</th>
-              <th>Title</th>
-              <th>Year</th>
-              <th>File</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody>
-            <!-- Standards will be rendered here -->
-          </tbody>
-        </table>
+      <div id="standardsList">
+        <!-- Standards will be rendered here -->
       </div>
     </div>
     <!-- Upload Modal -->
@@ -171,6 +210,17 @@
       </div>
     </div>
   </div>
+  <footer class="footer bg-light border-top py-3">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="d-flex align-items-center gap-3">
+        <span class="fw-bold">Presented by:</span>
+        <img src="DABE2.png" alt="DABE Logo" height="40">
+        <img src="VSU logo1.png" alt="VSU Logo" height="40">
+      </div>
+      <span>Help us maintain and improve AgriStand!</span>
+      <a href="#" class="fw-bold">Contact Us</a>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.js"></script>
   <script type="module" src="admin.js"></script>
