--- a/public/admin.html
+++ b/public/admin.html
@@ -74,8 +74,50 @@
       justify-content: center;
       color: white;
     }
+    @media (max-width: 768px) {
+      .admin-table-card { 
+        padding: 1.5rem 1rem;
+        margin: 20px auto;
+      }
+      .admin-header .container-fluid {
+        padding: 0.5rem 1rem;
+      }
+      .profile-dropdown .dropdown-toggle {
+        padding: 4px 8px;
+      }
+      .profile-icon {
+        width: 28px;
+        height: 28px;
+      }
+      .table {
+        font-size: 0.9rem;
+      }
+      .btn-sm {
+        padding: 0.25rem 0.4rem;
+      }
+      .modal-dialog {
+        margin: 0.5rem;
+      }
+      .footer .container {
+        flex-direction: column;
+        gap: 1rem;
+        text-align: center;
+      }
+      .footer .d-flex {
+        justify-content: center;
+      }
+    }
     @media (max-width: 600px) {
-      .admin-table-card { padding: 1.5rem 0.5rem; }
+      .admin-table-card { 
+        padding: 1rem 0.5rem;
+        margin: 10px auto;
+      }
+      .table {
+        font-size: 0.8rem;
+      }
+      .btn-sm {
+        padding: 0.2rem 0.3rem;
+      }
     }
   </style>
 </head>
