--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,33 @@
     .main-content {
       flex: 1;
     }
+    @media (max-width: 768px) {
+      .navbar .container-fluid {
+        flex-direction: column;
+        align-items: flex-start !important;
+        gap: 1rem;
+      }
+      .navbar .d-flex {
+        width: 100%;
+      }
+      .input-group {
+        width: 100%;
+      }
+      .form-select {
+        width: 100%;
+      }
+      .card-text {
+        font-size: 0.9rem;
+      }
+      .footer .container {
+        flex-direction: column;
+        gap: 1rem;
+        text-align: center;
+      }
+      .footer .d-flex {
+        justify-content: center;
+      }
+    }
   </style>
 </head>
 <body>
