Changes in mobile responsiveness: Make tables horizontal scroll.

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,13 @@
       .footer .d-flex {
         justify-content: center;
       }
+      .table-responsive {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+      }
+      .table {
+        min-width: 650px;
+      }
     }
   </style>
 </head>
