--- a/public/admin.html
+++ b/public/admin.html
@@ -91,6 +91,13 @@
       }
       .table {
         font-size: 0.9rem;
+        min-width: 800px;
+      }
+      .table-responsive {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        margin: 0 -1rem;
+        padding: 0 1rem;
       }
       .btn-sm {
         padding: 0.25rem 0.4rem;
@@ -114,6 +121,7 @@
       }
       .table {
         font-size: 0.8rem;
+        min-width: 700px;
       }
       .btn-sm {
         padding: 0.2rem 0.3rem;
