Fixed: Mobile responsiveness | Table Horizontal scroll

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,10 @@
       .footer .d-flex {
         justify-content: center;
       }
+      .standards-card {
+        margin: 0 -1rem;
+        padding: 0 1rem;
+      }
       .table-responsive {
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
@@ -101,7 +105,9 @@
           </div>
         </div>
       </div>
-      <div id="standardsList"></div>
+      <div class="standards-card">
+        <div id="standardsList"></div>
+      </div>
     </div>
   </div>
   <footer class="footer bg-light border-top py-3">
