--- a/public/admin.html
+++ b/public/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AgriStand Admin</title>
+  <title>ABESTAND Admin</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -156,7 +156,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <div class="d-flex align-items-center">
             <img src="https://img.icons8.com/ios-filled/50/4caf50/tractor.png" alt="Logo" width="40" height="40" class="me-2">
-            <span class="fw-bold fs-5">AgriStand | Admin</span>
+            <span class="fw-bold fs-5">ABESTAND | Admin</span>
           </div>
           <div class="profile-dropdown dropdown">
             <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -267,7 +267,7 @@
         <img src="DABE2.png" alt="DABE Logo" height="40">
         <img src="VSU logo1.png" alt="VSU Logo" height="40">
       </div>
-      <span>Help us maintain and improve AgriStand!</span>
+      <span>Help us maintain and improve ABESTAND!</span>
       <a href="#" class="fw-bold">Contact Us</a>
     </div>
   </footer>
