--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AgriStand</title>
+  <title>ABESTAND</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <style>
@@ -70,7 +70,7 @@
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="https://img.icons8.com/ios-filled/50/4caf50/tractor.png" alt="Logo" width="40" height="40" class="me-2">
-        <span class="fw-bold fs-4">AgriStand</span>
+        <span class="fw-bold fs-4">ABESTAND</span>
       </a>
       <span class="navbar-text ms-3 d-none d-lg-block text-dark">Empowering Agriculture through Increased Standard Accessibility</span>
       <div class="d-flex gap-2 ms-auto">
@@ -94,12 +94,12 @@
         <div class="col-12">
           <div class="card">
             <div class="card-body">
-              <h2 class="card-title mb-3 text-center">Welcome to AgriStand!</h2>
+              <h2 class="card-title mb-3 text-center">Welcome to ABESTAND!</h2>
               <p class="card-text" style="text-align: justify; text-justify: inter-word;">
-                AgriStand is a dedicated web portal designed to provide centralized, organized, and easily accessible references to Philippine Agricultural and Biosystems Engineering (ABE)-related standards. Tailored for ABE students, educators, professionals, and board exam reviewees, the portal offers a user-friendly interface, mobile-responsive design, and categorized access to standards from sources such as AMTEC and BAFS. With its structured layout, category filter, and basic search functionality, AgriStand supports efficient study, research, and technical referencing—particularly for users in academic and rural settings who require fast and reliable access to essential documents.
+                ABESTAND is a dedicated web portal designed to provide centralized, organized, and easily accessible references to Philippine Agricultural and Biosystems Engineering (ABE)-related standards. Tailored for ABE students, educators, professionals, and board exam reviewees, the portal offers a user-friendly interface, mobile-responsive design, and categorized access to standards from sources such as AMTEC and BAFS. With its structured layout, category filter, and basic search functionality, ABESTAND supports efficient study, research, and technical referencing—particularly for users in academic and rural settings who require fast and reliable access to essential documents.
               </p>
               <p class="card-text" style="text-align: justify; text-justify: inter-word;">
-                This student-initiated project is led by Henry Gabriel A. Pradilla, a student of the Department of Agricultural and Biosystems Engineering at Visayas State University (VSU-DABE), as part of his undergraduate thesis. AgriStand is continuously being improved and updated as more standards are published and made available.
+                This student-initiated project is led by Henry Gabriel A. Pradilla, a student of the Department of Agricultural and Biosystems Engineering at Visayas State University (VSU-DABE), as part of his undergraduate thesis. ABESTAND is continuously being improved and updated as more standards are published and made available.
               </p>
             </div>
           </div>
@@ -117,7 +117,7 @@
         <img src="DABE2.png" alt="DABE Logo" height="40">
         <img src="VSU logo1.png" alt="VSU Logo" height="40">
       </div>
-      <span>Help us maintain and improve AgriStand!</span>
+      <span>Help us maintain and improve ABESTAND!</span>
       <a href="#" class="fw-bold">Contact Us</a>
     </div>
   </footer>
